# aspire-ptemcee

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
src/aspire_ptemcee/: __init__.py  proposal.py  sampler.py
src/aspire_ptemcee/_vendor/ptemcee/: sampler.py  util.py
tests/: test_integration.py
