[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aspire-ptemcee"
authors = [
    {name = "Michael J. Williams", email = "michaeljw1@googlemail.com"},
]
description = "PTEmcee sampler for aspire"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aspire-inference",
    "numpy",
    "tqdm",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
extend-select = ["I"]

[project.entry-points."aspire.samplers"]
ptemcee = "aspire_ptemcee.sampler:PTEmceeSampler"
